--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   permission_handler: ^11.2.0
   safe_device: ^1.1.5 # Detect mock location, developer mode
   installed_apps: ^1.4.0 # Detect installed fake GPS apps
+  crypto: ^3.0.6 # HMAC-SHA256 for anti-tampering
+  uuid: ^4.5.1 # Nonce generation
 
   firebase_core: ^4.1.1
   firebase_messaging: ^16.0.2
