--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  mockito: ^5.4.4
+  build_runner: ^2.4.13
+  fake_async: ^1.3.1
 
 flutter:
   uses-material-design: true
